vlib/v/checker/tests/option_multi_return_err.vv
fn split(str string) ?(string, string) {
	return none
}

fn main() {
	foo, bar := split('foo/bar')
	println('${foo}.${bar}')
}
